--- a/containers/nginx/Dockerfile
+++ b/containers/nginx/Dockerfile
@@ -4,6 +4,5 @@ RUN apk add curl
 
 #COPY ./public /var/www/html
 
-COPY ./containers/nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY ./containers/nginx/php-hostname.conf /etc/nginx/custom/php-hostname.conf
-
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY php-hostname.conf /etc/nginx/custom/php-hostname.conf
