Edit nginx-backend Dockerfile

--- a/containers/nginx-backend/Dockerfile
+++ b/containers/nginx-backend/Dockerfile
@@ -4,5 +4,5 @@ RUN apk add curl
 
 #COPY ./backend /var/www/html
 
-COPY ./containers/nginx-backend/default.conf /etc/nginx/conf.d/default.conf
-COPY ./containers/nginx-backend/php-hostname.conf /etc/nginx/custom/php-hostname.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY php-hostname.conf /etc/nginx/custom/php-hostname.conf
